src/test/ui/issues/issue-57843.stderr
error[E0495]: cannot infer an appropriate lifetime due to conflicting requirements
  --> $DIR/issue-57843.rs:23:9
   |
LL |     Foo(Box::new(|_| ()));
   |         ^^^^^^^^^^^^^^^^
   |
   = note: first, the lifetime cannot outlive any other region...
   = note: ...but the lifetime must also be valid for any other region...
note: ...so that the types are compatible
  --> $DIR/issue-57843.rs:23:9
   |
LL |     Foo(Box::new(|_| ()));
   |         ^^^^^^^^^^^^^^^^
   = note: expected `std::ops::FnOnce<(&'a bool,)>`
              found `std::ops::FnOnce<(&bool,)>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0495`.
